--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "NODE_ENV=development nodemon src/index.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1554.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
