--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.3.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
