--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
+    "redis": "^4.6.13",
     "validator": "^13.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
