--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1554.0",
     "bcryptjs": "^2.4.3",
-    "circular-json": "^0.5.9",
-    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cross-env": "^7.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
@@ -28,15 +25,13 @@
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.3.1",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
     "redis": "^4.6.13",
     "validator": "^13.0.0",
-    "winston": "^3.2.1",
-    "xss-clean": "^0.1.1"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.7",
