--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport-jwt": "^4.0.0",
     "pm2": "^5.1.0",
     "redis": "^4.6.13",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "validator": "^13.0.0",
     "winston": "^3.2.1"
   },
